# lesson-loom

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  lesson-plan-generator-concept.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
app/: index.html
landing/: landing.css  landing.js
scripts/: capture.mjs  icon.html
server/: server.mjs
src/: App.tsx  frameworks.ts  mammoth-browser.d.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Dashboard.tsx  NewLesson.tsx  PlanView.tsx  SettingsPage.tsx
src/lib/: anthropic.ts  extract.ts  llm.ts  markdown.ts  openaiCompat.ts  prompts.ts  providers.ts  serverConfig.ts  storage.ts
