[package]
name = "lesson-loom"
version = "0.2.0"
description = "AI-assisted lesson plan generator"
authors = ["Michael Borck"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[profile.release]
strip = true
lto = true
codegen-units = 1
